# smart-pdf-paginator

./: README.md  output3.pd  pyproject.toml
examples/: example_usage.py
src/smart_pdf_splitter/: __init__.py  api.py  boundary_detection.py  cli.py  config.py  debug.py  extractor.py  logging_config.py  models.py  planner.py  renderer.py
src/smart_pdf_splitter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_atomic_blocks.py  test_boundary_detection.py  test_main_headings.py  test_planner.py  test_renderer.py
