[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-pdf-splitter"
version = "0.1.0"
description = "Split a single very tall PDF page into multiple US Letter pages at semantic boundaries."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Smart PDF Splitter Contributors" }]
license = { text = "MIT" }
dependencies = [
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "reportlab>=4.0",  # used in tests to generate synthetic PDFs
]

[project.scripts]
smart-pdf-split = "smart_pdf_splitter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
